--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1128,8 +1128,12 @@ img {
   max-width: 100%;
   height: auto;
 }
-.img-rounded {
-  border-radius: 6px;
+.rotate270 {
+    -webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    transform: rotate(270deg);
 }
 .img-thumbnail {
   padding: 4px;
