--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1128,7 +1128,7 @@ img {
   max-width: 100%;
   height: auto;
 }
-.rotate270 {
+.rotateimg270 {
     -webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
     -ms-transform: rotate(270deg);
