--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1129,11 +1129,7 @@ img {
   height: auto;
 }
 .rotateimg270 {
-    -webkit-transform: rotate(270deg);
-    -moz-transform: rotate(270deg);
-    -ms-transform: rotate(270deg);
-    -o-transform: rotate(270deg);
-    transform: rotate(270deg);
+    border-radius: 6px;
 }
 .img-thumbnail {
   padding: 4px;
